World gen stuff, you can now override non-structure world features. If not specified they will be defaults.